kubelabs-files-demo/practica/webpage.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deploy-webpage
  namespace: public
  labels:
    app: webpage
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: webpage
  template:
    metadata:
      name: webpage
      labels:
        app: webpage
    spec:
      containers:
      - name: webpage
        image: cachac/kubelabs_webapp:1.1.5
        ports:
        - containerPort:  8080
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 50Mi
        volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.js
      volumes:
      - name: config-volume
        hostPath:
          path: /home/kube/kubelabs/config.js
          type: FileOrCreate
