kubelabs-files-demo/practica/svc-websocket.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-websocket
  labels:
    app: websocket
spec:
  type: ClusterIP
  ports:
  - name: websocket
    protocol: TCP
    port: 3001
    targetPort: 3001
  selector:
    app: websocket
