kubelabs-files-demo/practica/ingress-webpage.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: public
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: svc-webpage
      port:
        number: 80
  rules:
  - host: carlosieqwr.kubelabs.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-webpage
            port:
              number: 80
