kubelabs-files-demo/practica/ingress-websocket.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-websocket
  namespace: public
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: svc-websocket
      port:
        number: 3001
  rules:
  - host: carlosieqwr.kubelabs.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-websocket
            port:
              number: 3001
