kubelabs-files-demo/practica/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webpage
  namespace: public
spec:
  defaultBackend:
    service:
      name: svc-webpage
      port:
        number: 80
  rules:
  - host: carlosieqwr.kubelabs.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-webpage
            port:
              number: 80
      - path: /websocket
        pathType: Prefix
        backend:
          service:
            name: svc-websocket
            port:
              number: 3001
